# dobot_atom_sdk_framework

./: CMakeLists.txt  README.md
config/robot/: default_robot_config.json
examples/: CMakeLists.txt
examples/advanced/: motion_planning_demo.cpp  safety_monitoring_demo.cpp
examples/basic/: hello_robot.cpp
include/control/: motion_controller.h  motion_types.h
include/monitor/: data_recorder.h  state_monitor.h
include/robot/: dobot_robot.h  robot_interface.h
include/safety/: emergency_stop.h  safety_manager.h
include/utils/: config_manager.h  logger.h
src/robot/: dobot_robot.cpp
tests/: CMakeLists.txt
